fix: :lipstick: Improve readability again

--- a/src/components/career/career.component.scss
+++ b/src/components/career/career.component.scss
@@ -70,8 +70,8 @@
       position: relative;
       z-index: 500;
       width: 100%;
-      color: rgb(197, 197, 197);
-      text-shadow: 0px 5px 20px rgba(0, 0, 0, 1);
+      color: rgb(168, 168, 168);
+      text-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
 
       .career__station {
         padding-top: 16px;
@@ -102,7 +102,7 @@
 
         &__title {
           text-transform: uppercase;
-          font-size: 22px;
+          font-size: 20px;
         }
 
         &__time-span {
